<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name_joke_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitish"
    tools:context=".ui.namejoke.NameJokeActivity">

    <ProgressBar
        android:id="@+id/joke_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/name_entry_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:textColor="@color/dark_grey"
        android:text="@string/name_instructions"
        app:layout_constraintBottom_toTopOf="@+id/name_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name_auto_fill"
        android:hint="@string/name_hint"
        android:inputType="textFilter"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/name_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_entry_text"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/name_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/red"
        android:textSize="24sp"
        android:text="@string/name_button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_entry" />

</androidx.constraintlayout.widget.ConstraintLayout>